<resources>
    <string name="app_name">CoffeeBank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="data">Data</string>
    <string name="add_update_or_remove_customers">Add, update or remove customers</string>
    <string name="customer">Customer</string>
    <string name="add_update_or_remove_products">Add, update or remove products</string>
    <string name="manage_transactions">Manage transactions</string>
    <string name="products">Products</string>
    <string name="transactions">Transactions</string>
    <string name="backup">Backup</string>
    <string name="create_backup">Create Backup</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="create_report">Create Report</string>
    <string name="create_report_of_customer_data">Create a report of customer data</string>
    <string name="password">Password</string>
    <string name="set_admin_password">Set admin password to access this screen</string>
    <string name="create_backup_of_customers_products_transactions">Create backup of customers, products, transactions</string>
    <string name="restore_customers_products_transaction">Restore customers, products, transactions</string>
    <string name="name">Name</string>
    <string name="balance">Balance</string>
    <string name="id" translatable="false">ID</string>
    <string name="hint_balance" translatable="false">0.00</string>
    <string name="remove">Remove</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="delete">Delete</string>
    <string name="confirm_customer_delete">Delete customer %1$s %2$s?</string>
    <string name="save">Save</string>
    <string name="add_customer">Add Customer</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="hint_price" translatable="false">0.00</string>
    <string name="hint_stock" translatable="false">0</string>
    <string name="confirm_product_delete">Delete product %1$s?</string>
    <string name="add_product">Add Product</string>
    <string name="incorrect">Password incorrect</string>
    <string name="buy">Buy</string>
    <string name="buy_product">Buy %1$s?</string>
    <string name="not_stocked">Product not in stock</string>
    <string name="product">Product</string>
    <string name="date">Date</string>
    <string name="confirm_transaction_delete">Delete transaction of %1$s %2$s for %3$s?</string>
    <string name="error_reading_backup">Error reading backup</string>
    <string name="rgb_red">Red %1$d</string>
    <string name="rgb_green">Green %1$d</string>
    <string name="rgb_blue">Blue %1$d</string>
</resources>
